examples/test/testpolicy11478.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11478
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key9: value2
      key29: value7
      key27: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value34
          key13: value39
          key46: value10
      podSelector:
        matchLabels:
          key35: value42
          key33: value11
